--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
                 <p class="main-text">"DOING THE JOB OF EIGHT TRADITIONAL COOKWARE PIECES"</p>
             </div>
             <div class="image-control">
-                <img src="assept/bon appetit.svg">
-                <img src="assept/The New York Times.svg">
-                <img src="assept/Vogue.svg">
-                <img src="assept/The Oprah Magazine.svg">
+                <button class="dem0"><img src="assept/bon appetit.svg"></button>
+                <button class="dem1"><img src="assept/The New York Times.svg"></button>
+                <button class="dem2"><img src="assept/Vogue.svg"></button>
+                <button class="dem3"><img src="assept/The Oprah Magazine.svg"></button>
             </div>          
         </section>
         <section class="main-info-2 container">
@@ -178,15 +178,18 @@
                 <img src="assept/dish1.svg">
             </div>
             <div class="dish-info">
-                <div class="dish-info-1">
-                    <h1>#DIRTYDISHES</h1>
+                <div class="dish-info1">
+                    <div class="dish-info-1">
+                    <h1 class="dish-h1">#DIRTYDISHES</h1>
+                    </div>
+                    <div class="dish-info-2">
+                        <p class="dish-p1">A full sink is a sign of a great night.<br>You wash, we'll dry.</p>
+                    </div>
+                    <div class="dish-info-3">
+                        <button class="demo1">FOLLOW ALONG</button>
+                    </div>
                 </div>
-                <div class="dish-info-2">
-                    <p>A full sink is a sign of a great night.<br>You wash, we'll dry.</p>
-                </div>
-                <div class="dish-info-3">
-                    <p>FOLLOW ALONG</p>
-                </div>
+                
             </div>
             <div class="dish-pict-1">
                 <img src="assept/dish2.svg">
@@ -196,12 +199,12 @@
     </main>
     
 
-    <footer>
+    <footer class="container">
         <div class="your-info">
             <div class="your-info-1">
                 <div class="info-email">
                     <div class="info-text">
-                        <h2>Keep in touch 😊</h2>
+                        <h2 class="info-h2">Keep in touch 😊</h2>
                     </div>
                     <div class="info-text-1">
                         <p>Be the first to know about new collections, special events, and what's going on at Our Place.</p>
